--- a/proyecto CFDI 4.0 unidad 2/index.html
+++ b/proyecto CFDI 4.0 unidad 2/index.html
@@ -19,8 +19,20 @@
     <!-- endinject -->
     <!-- Layout styles -->
     <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/normalize.css">
+    <link rel="stylesheet" href="assets/css/main.css"> 
     <!-- End layout styles -->
     <link rel="shortcut icon" href="assets/images/favicon.png" />
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-18562188-24"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-18562188-24');
+    </script>
   </head>
   <body>
     <div class="container-scroller">
@@ -109,7 +121,65 @@
         <!-- partial -->
         <div class="main-panel">
           <div class="content-wrapper">
-            <!-- Aquí va el código -->
+            <h1>Analizador CFDIs</h1>
+            <div id="app">
+              <div id="drop" class="dropfiles margenb" ref="drop">Arrastra los archivos XML aquí</div>
+
+              <div class="row">
+                  <div class="col-sm">
+                      <table class="table table-striped table-bordered table-hover margenb" id="totales" ref="totales" style="width:320px">
+                          <tbody>
+                              <tr><th>Cantidad</th><td>{{cantidad}}</td></tr>
+                              <tr><th>Total</th><td>${{total_suma.toFixed(2)}}</td></tr>
+                              <tr><th>Impuestos Trasladados</th><td>${{total_impuestos_trasladados.toFixed(2)}}</td></tr>
+                          </tbody>
+                      </table>
+                  </div>
+                  <div class="col-sm">
+                      <div v-if="errores.length" class="alert alert-warning">
+                          <h3>Errores:</h3>
+                          <ul>
+                              <li v-for="error in errores">{{error.archivo}}: {{error.mensaje}}</li>
+                          </ul>
+                      </div>
+                  </div>
+              </div>
+
+              <table class="table table-striped table-bordered table-hover" id="tabla" ref="tabla">
+                  <thead>
+                      <tr>
+                          <th>Fecha</th>
+                          <th>Rfc</th>
+                          <th>Nombre</th>
+                          <th>Conceptos</th>
+                          <th>Total</th>
+                          <th>Imp Trasladados</th>
+                          <th>Archivo</th>
+                      </tr>
+                  </thead>
+                  <tbody>
+                      <tr v-for="cfdi in cfdis">
+                          <td>{{cfdi.fecha}}</td>
+                          <td>{{cfdi.rfc}}</td>
+                          <td>{{cfdi.nombre}}</td>
+                          <td>
+                              <div v-for="concepto in cfdi.conceptos" class="concepto">
+                                  {{concepto.cantidad}}
+                                  {{concepto.descripcion}}
+                                  ${{concepto.importe.toFixed(2)}}
+                                <span v-for="traslado in concepto.traslados" class="traslado">
+                                    {{traslado.tipo}}
+                                    {{traslado.tasa}}
+                                </span>
+                              </div>
+                          </td>
+                          <td>{{total(cfdi).toFixed(2)}}</td>
+                          <td>{{cfdi.totalimpuestostrasladados.toFixed(2)}}</td>
+                          <td>{{cfdi.archivo}}</td>
+                      </tr>
+                  </tbody>
+              </table>
+          </div>
           </div>
           <!-- content-wrapper ends -->
           <!-- partial:partials/_footer.html -->
@@ -145,5 +215,14 @@
     <!-- Custom js for this page -->
     <script src="assets/js/dashboard.js"></script>
     <!-- End custom js for this page -->
+    <!-- jquery -->
+    <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
+        
+    <!-- vue -->
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.16/vue.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.5.16/vue.min.js"></script>
+
+    <script src="assets/js/cargarxml.js?v=1.1.1"></script>
+    <script src="assets/js/main.js?v=1.1.1"></script>
   </body>
 </html>
