--- a/proyecto CFDI 4.0 unidad 2/index.html
+++ b/proyecto CFDI 4.0 unidad 2/index.html
@@ -124,9 +124,8 @@
             <h1>Analizador CFDIs</h1>
             <div id="app">
               <div id="drop" class="dropfiles margenb" ref="drop">Arrastra los archivos XML aquí</div>
-
               <div class="row">
-                  <div class="col-sm">
+                  <div class="col-sm table-responsive">
                       <table class="table table-striped table-bordered table-hover margenb" id="totales" ref="totales" style="width:320px">
                           <tbody>
                               <tr><th>Cantidad</th><td>{{cantidad}}</td></tr>
@@ -144,41 +143,42 @@
                       </div>
                   </div>
               </div>
-
-              <table class="table table-striped table-bordered table-hover" id="tabla" ref="tabla">
-                  <thead>
-                      <tr>
-                          <th>Fecha</th>
-                          <th>Rfc</th>
-                          <th>Nombre</th>
-                          <th>Conceptos</th>
-                          <th>Total</th>
-                          <th>Imp Trasladados</th>
-                          <th>Archivo</th>
-                      </tr>
-                  </thead>
-                  <tbody>
-                      <tr v-for="cfdi in cfdis">
-                          <td>{{cfdi.fecha}}</td>
-                          <td>{{cfdi.rfc}}</td>
-                          <td>{{cfdi.nombre}}</td>
-                          <td>
-                              <div v-for="concepto in cfdi.conceptos" class="concepto">
-                                  {{concepto.cantidad}}
-                                  {{concepto.descripcion}}
-                                  ${{concepto.importe.toFixed(2)}}
-                                <span v-for="traslado in concepto.traslados" class="traslado">
-                                    {{traslado.tipo}}
-                                    {{traslado.tasa}}
-                                </span>
-                              </div>
-                          </td>
-                          <td>{{total(cfdi).toFixed(2)}}</td>
-                          <td>{{cfdi.totalimpuestostrasladados.toFixed(2)}}</td>
-                          <td>{{cfdi.archivo}}</td>
-                      </tr>
-                  </tbody>
-              </table>
+              <div class="table-responsive">
+                <table class="table table-striped table-bordered table-hover" id="tabla" ref="tabla">
+                    <thead>
+                        <tr>
+                            <th>Fecha</th>
+                            <th>Rfc</th>
+                            <th>Nombre</th>
+                            <th>Conceptos</th>
+                            <th>Total</th>
+                            <th>Imp Trasladados</th>
+                            <th>Archivo</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr v-for="cfdi in cfdis">
+                            <td>{{cfdi.fecha}}</td>
+                            <td>{{cfdi.rfc}}</td>
+                            <td>{{cfdi.nombre}}</td>
+                            <td>
+                                <div v-for="concepto in cfdi.conceptos" class="concepto">
+                                    {{concepto.cantidad}}
+                                    {{concepto.descripcion}}
+                                    ${{concepto.importe.toFixed(2)}}
+                                  <span v-for="traslado in concepto.traslados" class="traslado">
+                                      {{traslado.tipo}}
+                                      {{traslado.tasa}}
+                                  </span>
+                                </div>
+                            </td>
+                            <td>{{total(cfdi).toFixed(2)}}</td>
+                            <td>{{cfdi.totalimpuestostrasladados.toFixed(2)}}</td>
+                            <td>{{cfdi.archivo}}</td>
+                        </tr>
+                    </tbody>
+                </table>
+              </div>
           </div>
           </div>
           <!-- content-wrapper ends -->
