Se agregó espacio para totales

--- a/proyecto CFDI 4.0 unidad 2/index.html
+++ b/proyecto CFDI 4.0 unidad 2/index.html
@@ -181,6 +181,9 @@
                                 <td>{{cfdi.archivo}}</td>
                             </tr>
                         </tbody>
+                        <tfoot>
+                          <td scope="row">Totales:</td>
+                        </tfoot>
                     </table>
                   </div>
                 </div>
