--- a/proyecto CFDI 4.0 unidad 2/index.html
+++ b/proyecto CFDI 4.0 unidad 2/index.html
@@ -104,14 +104,6 @@
             <button class="navbar-toggler navbar-toggler align-self-center" type="button" data-toggle="minimize">
               <span class="mdi mdi-menu"></span>
             </button>
-            <ul class="navbar-nav w-100">
-              <li class="nav-item w-100">
-                <form class="nav-link mt-2 mt-md-0 d-none d-lg-flex search">
-                  <!--input type="text" class="form-control" placeholder="Buscar algo"-->
-                </form>
-              </li>
-            </ul>
-            
             <button class="navbar-toggler navbar-toggler-right d-lg-none align-self-center" type="button" data-toggle="offcanvas">
               <span class="mdi mdi-format-line-spacing"></span>
             </button>
@@ -186,7 +178,7 @@
                     </table>
                   </div>
                 </div>
-                <input type="button" value="Exportar a excel" onclick="exportTableToExcel('tabla','Reporte')">
+                <input style="background-color: #12151e; color: aliceblue; border-color: #12151e;" class="btn btn-primary btn-fw" type="button" value="Exportar a excel" onclick="exportTableToExcel('tabla','Reporte')">
               </div>
           </div>
           </div>
