--- a/proyecto CFDI 4.0 unidad 2/index.html
+++ b/proyecto CFDI 4.0 unidad 2/index.html
@@ -137,7 +137,10 @@
               <div class="card">
                 <div class="card-body">
                   <h4 class="card-title">Resultados</h4>
-                  <p class="card-description"> <input type="text" class="form-control" placeholder="Buscar algo" style="color: aliceblue;"></p>
+                  <p class="card-description"> <input type="text" class="form-control" placeholder="Buscar algo" style="color: aliceblue;">
+                    <input style="background-color: #12151e; color: aliceblue; border-color: #12151e;" class="btn btn-primary btn-fw form-control" type="button" value="Exportar a excel" onclick="exportTableToExcel('tabla','Reporte')">
+                  </p>
+                  
                   <div class="table-responsive">
                     <table class="table table-striped table-bordered table-hover" id="tabla" ref="tabla">
                         <thead>
@@ -151,7 +154,7 @@
                                 <th>Archivo</th>
                             </tr>
                         </thead>
-                        <tbody>
+                        <tbody id="tablita">
                             <tr v-for="cfdi in cfdis">
                                 <td>{{cfdi.fecha}}</td>
                                 <td>{{cfdi.rfc}}</td>
@@ -177,9 +180,8 @@
                         </tfoot>
                     </table>
                   </div>
+                  <input style="background-color: #12151e; color: aliceblue; border-color: #12151e;" class="btn btn-primary btn-fw form-control" type="button" value="Limpiar tabla" onclick="limpiar_tabla()">
                 </div>
-                <input style="background-color: #12151e; color: aliceblue; border-color: #12151e;" class="btn btn-primary btn-fw" type="button" value="Exportar a excel" onclick="exportTableToExcel('tabla','Reporte')">
-                <br><input style="background-color: #12151e; color: aliceblue; border-color: #12151e;" class="btn btn-primary btn-fw" type="button" value="Limpiar tabla" onclick="limpiar_tabla()">
               </div>
           </div>
           </div>
@@ -259,10 +261,10 @@
       }
 
       function limpiar_tabla(){
-        var table = document.getElementById("tabla");
+        var table = document.getElementById("tablita");
         var rowCount = table.rows.length;
       
-        if(rowCount < 2)
+        if(rowCount < 1)
             alert('No se puede eliminar el encabezado');
         else
             table.deleteRow(rowCount -1);
