Agregar menú de estadisticas

--- a/proyecto CFDI 4.0 unidad 2/index.html
+++ b/proyecto CFDI 4.0 unidad 2/index.html
@@ -91,6 +91,14 @@
               <span class="menu-title">Consultar CFDI</span>
             </a>
           </li>
+          <li class="nav-item menu-items">
+            <a class="nav-link" href="#">
+              <span class="menu-icon">
+                <i class="mdi mdi-table-large"></i>
+              </span>
+              <span class="menu-title">Estadisticas</span>
+            </a>
+          </li>
         </ul>
       </nav>
       <!-- partial -->
