corrección de escritura

--- a/proyecto CFDI 4.0 unidad 2/index.html
+++ b/proyecto CFDI 4.0 unidad 2/index.html
@@ -158,7 +158,7 @@
                                 <th>Nombre receptor</th>
                                 <th>Conceptos</th>
                                 <th>Total</th>
-                                <th>Imp Trasladados</th>
+                                <th>Impuestos</th>
                                 <th>Rfc emisor</th>
                                 <th>Nombre emisor</th>
                                 <th>Archivo</th>
