--- a/proyecto CFDI 4.0 unidad 2/index.html
+++ b/proyecto CFDI 4.0 unidad 2/index.html
@@ -128,8 +128,8 @@
                       <table class="table table-striped table-bordered table-hover margenb" id="totales" ref="totales" style="width:320px">
                           <tbody>
                               <tr><th>Cantidad</th><td>{{cantidad}}</td></tr>
-                              <tr><th>Total</th><td>${{total_suma.toFixed(2)}} $</td></tr>
-                              <tr><th>Total impuestos</th><td>${{total_impuestos_trasladados.toFixed(2)}} $</td></tr>
+                              <tr><th>Total</th><td>${{total_suma.toFixed(2)}}</td></tr>
+                              <tr><th>Total impuestos</th><td>${{total_impuestos_trasladados.toFixed(2)}}</td></tr>
                           </tbody>
                       </table>
                   </div>
@@ -150,25 +150,27 @@
                   </p>
                   
                   <div class="table-responsive">
-                    <table class="table table-striped table-bordered table-hover" id="tabla" ref="tabla">
+                    <table class="table table-striped table-bordered table-hover" id="tabla" ref="tabla" style="color: aliceblue;">
                         <thead>
                             <tr>
                                 <th>Fecha</th>
-                                <th>Rfc receptor</th>
+                                <th>Rfc emisor</th>
+                                <th>Nombre emisor</th>
                                 <th>Nombre receptor</th>
+                                <th>Rfc receptor</th>
                                 <th>Conceptos</th>
                                 <th>Total</th>
                                 <th>Impuestos</th>
-                                <th>Rfc emisor</th>
-                                <th>Nombre emisor</th>
                                 <th>Archivo</th>
                             </tr>
                         </thead>
-                        <tbody id="tablita">
+                        <tbody id="tablita" >
                             <tr v-for="cfdi in cfdis">
                                 <td>{{cfdi.fecha}}</td>
                                 <td>{{cfdi.rfc}}</td>
                                 <td>{{cfdi.nombre}}</td>
+                                <td>{{cfdi.nombre_receptor}}</td>
+                                <td>{{cfdi.rfc_receptor}}</td>
                                 <td>
                                     <div v-for="concepto in cfdi.conceptos" class="concepto">
                                         {{concepto.cantidad}}
@@ -182,8 +184,6 @@
                                 </td>
                                 <td>{{total(cfdi).toFixed(2)}} $</td>
                                 <td>{{cfdi.totalimpuestostrasladados.toFixed(2)}} $</td>
-                                <td>{{cfdi.rfc_receptor}}</td>
-                                <td>{{cfdi.nombre_receptor}}</td>
                                 <td>{{cfdi.archivo}}</td>
                             </tr>
                         </tbody>
