--- a/proyecto CFDI 4.0 unidad 2/cambiar_pass.html
+++ b/proyecto CFDI 4.0 unidad 2/cambiar_pass.html
@@ -25,7 +25,7 @@
           <div class="content-wrapper full-page-wrapper d-flex align-items-center auth login-bg">
             <div class="card col-lg-4 mx-auto">
               <div class="card-body px-5 py-5">
-                <h3 class="card-title text-left mb-3">Registrarse</h3>
+                <h3 class="card-title text-left mb-3">Cambiar contraseña</h3>
                 <form>
                   <div class="form-group">
                     <label>Usuario</label>
@@ -40,8 +40,8 @@
                     <input type="password" class="form-control p_input" placeholder="Contraseña">
                   </div>
                   <div class="form-group">
-                    <label>Confirmar contraseña</label>
-                    <input type="password" class="form-control p_input" placeholder="Confirmar contraseña">
+                    <label>Nueva contraseña</label>
+                    <input type="password" class="form-control p_input" placeholder="Nueva contraseña">
                   </div>
                   <div class="form-group d-flex align-items-center justify-content-between">
                     <div class="form-check">
@@ -50,15 +50,8 @@
                     </div>
                   </div>
                   <div class="text-center">
-                    <button type="submit" class="btn btn-primary btn-block enter-btn">Crear cuenta</button>
+                    <button type="submit" class="btn btn-primary btn-block enter-btn">Cambiar contraseña</button>
                   </div>
-                  <div class="d-flex">
-                    <button class="btn btn-facebook col mr-2">
-                      <i class="mdi mdi-facebook"></i> Facebook </button>
-                    <button class="btn btn-google col">
-                      <i class="mdi mdi-google-plus"></i> Gmail </button>
-                  </div>
-                  <p class="sign-up text-center">Ya tiene cuenta?<a href="login.html"> Inicie sesión</a></p>
                 </form>
               </div>
             </div>
