--- a/proyecto CFDI 4.0 unidad 2/login.html
+++ b/proyecto CFDI 4.0 unidad 2/login.html
@@ -40,7 +40,7 @@
                       <label class="form-check-label">
                         <input type="checkbox" class="form-check-input"> Mostrar contraseña </label>
                     </div>
-                    <a href="#" class="forgot-pass">Recuperar contraseña</a>
+                    <a href="cambiar_pass.html" class="forgot-pass">Recuperar contraseña</a>
                   </div>
                   <div class="text-center">
                     <button type="submit" class="btn btn-primary btn-block enter-btn">Iniciar sesión</button>
