plantilla base de estadisticas.html

--- a/proyecto CFDI 4.0 unidad 2/estadisticas.html
+++ b/proyecto CFDI 4.0 unidad 2/estadisticas.html
@@ -91,7 +91,7 @@
               <span class="menu-title">Consultar CFDI</span>
             </a>
           </li>
-          <li class="nav-item menu-items">
+          <li class="nav-item menu-items selected">
             <a class="nav-link" href="estadisticas.html">
               <span class="menu-icon">
                 <i class="mdi mdi-table-large"></i>
