Se agregó configuración de perfil de usuario

--- a/proyecto CFDI 4.0 unidad 2/index.html
+++ b/proyecto CFDI 4.0 unidad 2/index.html
@@ -38,7 +38,7 @@
     <div class="container-scroller">
       <nav class="sidebar sidebar-offcanvas" id="sidebar">
         <div class="sidebar-brand-wrapper d-none d-lg-flex align-items-center justify-content-center fixed-top">
-          <a class="sidebar-brand brand-logo" href="index.html" style="color: whitesmoke;"><h1>CFDI</h1></a>
+          <a class="sidebar-brand brand-logo" href="index.html" style="color: whitesmoke;"><h2>CFDI</h2></a>
           <a class="sidebar-brand brand-logo-mini" href="index.html" style="color: whitesmoke;"><h6>CFDI</h6></a>
         </div>
         <ul class="nav">
@@ -50,7 +50,7 @@
                   <span class="count bg-success"></span>
                 </div>
                 <div class="profile-name">
-                  <h5 class="mb-0 font-weight-normal">Invitado</h5>
+                  <h5 class="mb-0 font-weight-normal"><a href="configurar-perfil.html" style="color: whitesmoke">Invitado</a></h5>
                   <span>Aun no ha iniciado sesión</span>
                 </div>
               </div>
