--- a/proyecto CFDI 4.0 unidad 2/configurar-perfil.html
+++ b/proyecto CFDI 4.0 unidad 2/configurar-perfil.html
@@ -16,32 +16,30 @@
           <div class="content-wrapper full-page-wrapper d-flex align-items-center auth login-bg">
             <div class="card col-lg-4 mx-auto">
               <div class="card-body px-5 py-5">
-                <h3 class="card-title text-left mb-3">Cambiar contraseña</h3>
+                <h3 class="card-title text-left mb-3">Configuración de perfil</h3>
                 <form>
                   <div class="form-group">
-                    <label>Usuario</label>
-                    <input type="text" class="form-control p_input" placeholder="Nombre de usuario">
+                    <label>Nombre</label>
+                    <input type="text" class="form-control p_input" placeholder="Nombre completo">
                   </div>
                   <div class="form-group">
                     <label>Correo electronico</label>
                     <input type="email" class="form-control p_input" placeholder="Dirección de correo">
                   </div>
                   <div class="form-group">
+                    <label>Nombre de usuario</label>
+                    <input type="text" class="form-control p_input" placeholder="Nombre de usuario">
+                  </div>
+                  <div class="form-group">
                     <label>Contraseña</label>
                     <input type="password" class="form-control p_input" placeholder="Contraseña">
                   </div>
                   <div class="form-group">
-                    <label>Nueva contraseña</label>
-                    <input type="password" class="form-control p_input" placeholder="Nueva contraseña">
-                  </div>
-                  <div class="form-group d-flex align-items-center justify-content-between">
-                    <div class="form-check">
-                      <label class="form-check-label">
-                        <input type="checkbox" class="form-check-input"> Mostrar contraseña </label>
-                    </div>
+                    <label>Foto de perfil</label>
+                    <input type="file" class="form-control p_input">
                   </div>
                   <div class="text-center">
-                    <button type="submit" class="btn btn-primary btn-block enter-btn">Cambiar contraseña</button>
+                    <button type="submit" class="btn btn-primary btn-block enter-btn">Guardar cambios</button>
                   </div>
                 </form>
               </div>
