Se agregó boton para volver en todos los forms

--- a/proyecto CFDI 4.0 unidad 2/cambiar_pass.html
+++ b/proyecto CFDI 4.0 unidad 2/cambiar_pass.html
@@ -16,6 +16,7 @@
           <div class="content-wrapper full-page-wrapper d-flex align-items-center auth login-bg">
             <div class="card col-lg-4 mx-auto">
               <div class="card-body px-5 py-5">
+                <a href="index.html"><i class="mdi mdi-chevron-left"></i></a>
                 <h3 class="card-title text-left mb-3">Cambiar contraseña</h3>
                 <form>
                   <div class="form-group">
