--- a/proyecto CFDI 4.0 unidad 2/register.html
+++ b/proyecto CFDI 4.0 unidad 2/register.html
@@ -25,6 +25,7 @@
           <div class="content-wrapper full-page-wrapper d-flex align-items-center auth login-bg">
             <div class="card col-lg-4 mx-auto">
               <div class="card-body px-5 py-5">
+                <a href="login.html"><i class="mdi mdi-chevron-left"></i></a>
                 <h3 class="card-title text-left mb-3">Registrarse</h3>
                 <form>
                   <div class="form-group">
