organización de archivos y secuencia del programa

--- a/proyecto CFDI 4.0 unidad 2/index.html
+++ b/proyecto CFDI 4.0 unidad 2/index.html
@@ -50,7 +50,7 @@
                   <span class="count bg-success"></span>
                 </div>
                 <div class="profile-name">
-                  <h5 class="mb-0 font-weight-normal"><a href="configurar-perfil.html" style="color: whitesmoke">Invitado</a></h5>
+                  <h5 class="mb-0 font-weight-normal"><a href="#" style="color: whitesmoke">Invitado</a></h5>
                   <span>Aun no ha iniciado sesión</span>
                 </div>
               </div>
@@ -59,22 +59,11 @@
                 <a href="login.html" class="dropdown-item preview-item">
                   <div class="preview-thumbnail">
                     <div class="preview-icon bg-dark rounded-circle">
-                      <i class="mdi mdi-settings text-primary"></i>
+                      <i class="mdi mdi-account text-primary"></i>
                     </div>
                   </div>
                   <div class="preview-item-content">
-                    <p class="preview-subject ellipsis mb-1 text-small">Configurar cuenta</p>
-                  </div>
-                </a>
-                <div class="dropdown-divider"></div>
-                <a href="cambiar_pass.html" class="dropdown-item preview-item">
-                  <div class="preview-thumbnail">
-                    <div class="preview-icon bg-dark rounded-circle">
-                      <i class="mdi mdi-onepassword  text-info"></i>
-                    </div>
-                  </div>
-                  <div class="preview-item-content">
-                    <p class="preview-subject ellipsis mb-1 text-small">Cambiar contraseña</p>
+                    <p class="preview-subject ellipsis mb-1 text-small">Iniciar sesión</p>
                   </div>
                 </a>
               </div>
@@ -89,14 +78,6 @@
                 <i class="mdi mdi-speedometer"></i>
               </span>
               <span class="menu-title">Consultar CFDI</span>
-            </a>
-          </li>
-          <li class="nav-item menu-items">
-            <a class="nav-link" href="estadisticas.html">
-              <span class="menu-icon">
-                <i class="mdi mdi-table-large"></i>
-              </span>
-              <span class="menu-title">Estadisticas</span>
             </a>
           </li>
         </ul>
@@ -192,7 +173,6 @@
                         </tfoot>
                     </table>
                   </div>
-                  <input style="background-color: #12151e; color: aliceblue; border-color: #12151e;" class="btn btn-primary btn-fw form-control" type="button" value="Guardar datos" onclick="alert('En construcción')">
                 </div>
               </div>
           </div>
