--- a/proyecto CFDI 4.0 unidad 2/index.html
+++ b/proyecto CFDI 4.0 unidad 2/index.html
@@ -110,9 +110,14 @@
                   <div class="col-sm table-responsive">
                       <table class="table table-striped table-bordered table-hover margenb" id="totales" ref="totales" style="width:320px">
                           <tbody>
-                              <tr><th>Cantidad</th><td>{{cantidad}}</td></tr>
-                              <tr><th>Total</th><td>${{total_suma.toFixed(2)}}</td></tr>
-                              <tr><th>Total impuestos</th><td>${{total_impuestos_trasladados.toFixed(2)}}</td></tr>
+                              <tr><th>Cantidad:</th><td>{{cantidad}}</td></tr>
+                              <tr><th>Ingresos:</th><td></td></tr>
+                              <tr><th>Egresos:</th><td></td></tr>
+                              <tr><th>Traslados:</th><td></td></tr>
+                              <tr><th>Nómina:</th><td></td></tr>
+                              <tr><th>Pago:</th><td></td></tr>
+                              <tr><th>Total:</th><td>${{total_suma.toFixed(2)}}</td></tr>
+                              <tr><th>Total impuestos:</th><td>${{total_impuestos_trasladados.toFixed(2)}}</td></tr>
                           </tbody>
                       </table>
                   </div>
@@ -135,7 +140,22 @@
                   <div class="table-responsive">
                     <table class="table table-striped table-bordered table-hover" id="tabla" ref="tabla" style="color: aliceblue; scroll-behavior: auto;">
                         <thead>
-                            <tr>
+                          <tr>
+                            <th>Fecha</th>
+                            <th>tipo</th>
+                            <th>serie</th>
+                            <th>Fact</th>
+                            <th>Razón social</th>
+                            <th>Importe excento</th>
+                            <th>Importe gravado</th>
+                            <th>iva</th>
+                            <th>Importe retenido</th>
+                            <th>Total</th>
+                            <th>RFC para DIOT</th>
+                            <th>Concepto del gasto</th>
+                            <th>Nombre de archivo XML</th>
+                          </tr>
+                            <!--tr> //Formato antiguo
                                 <th>Fecha</th>
                                 <th>Rfc emisor</th>
                                 <th>Nombre emisor</th>
@@ -145,7 +165,7 @@
                                 <th>Total</th>
                                 <th>Impuestos</th>
                                 <th>Archivo</th>
-                            </tr>
+                            </tr-->
                         </thead>
                         <tbody id="tablita" >
                             <tr v-for="cfdi in cfdis">
@@ -171,7 +191,7 @@
                             </tr>
                         </tbody>
                     </table>
-                    <script>
+                    <script>//Buscar elementos
                       $(document).ready(function(){
                         $("#buscar").on("keyup", function() {
                           var value = $(this).val().toLowerCase();
@@ -274,7 +294,7 @@
             table.deleteRow(rowCount -1);
           }
     </script>
-    <script>
+    <script>//Ordenar tabla
         (function($){
         $.fn.extend({
               makeSortable: function(){
