--- a/proyecto CFDI 4.0 unidad 2/index.html
+++ b/proyecto CFDI 4.0 unidad 2/index.html
@@ -111,11 +111,11 @@
                       <table class="table table-striped table-bordered table-hover margenb" id="totales" ref="totales" style="width:320px">
                           <tbody>
                               <tr><th>Cantidad:</th><td>{{cantidad}}</td></tr>
-                              <tr><th>Ingresos:</th><td></td></tr>
-                              <tr><th>Egresos:</th><td></td></tr>
-                              <tr><th>Traslados:</th><td></td></tr>
-                              <tr><th>Nómina:</th><td></td></tr>
-                              <tr><th>Pago:</th><td></td></tr>
+                              <tr><th>Ingresos:</th><td>{{total_ingresos}}</td></tr>
+                              <tr><th>Egresos:</th><td>{{total_egresos}}</td></tr>
+                              <tr><th>Traslados:</th><td>{{total_traslados}}</td></tr>
+                              <tr><th>Nómina:</th><td>{{total_nomina}}</td></tr>
+                              <tr><th>Pago:</th><td>{{total_pago}}</td></tr>
                               <tr><th>Total:</th><td>${{total_suma.toFixed(2)}}</td></tr>
                               <tr><th>Total impuestos:</th><td>${{total_impuestos_trasladados.toFixed(2)}}</td></tr>
                           </tbody>
