importe gravado e iva

--- a/proyecto CFDI 4.0 unidad 2/index.html
+++ b/proyecto CFDI 4.0 unidad 2/index.html
@@ -177,8 +177,8 @@
                                 <td>{{cfdi.fact}}</td>
                                 <td>{{cfdi.nombre}}</td>
                                 <td></td>
-                                <td></td>
-                                <td></td>
+                                <td>{{total_gravado(cfdi).toFixed(2)}} $</td>
+                                <td>{{cfdi.iva}} $</td>
                                 <td><!--{{cfdi.rfc_receptor}}--></td>
                                 <td>{{total(cfdi).toFixed(2)}} $</td>
                                 <td>{{cfdi.rfc}}</td>
