Se agregó subtotal en los xml y se integró parte de alondra

--- a/proyecto CFDI 4.0 unidad 2/index.html
+++ b/proyecto CFDI 4.0 unidad 2/index.html
@@ -176,7 +176,7 @@
                                 <td>{{cfdi.fact}}</td>
                                 <td>{{cfdi.nombre}}</td>
                                 <td></td>
-                                <td>{{total_gravado(cfdi).toFixed(2)}} $</td>
+                                <td>{{cfdi.sub_total}} $</td>
                                 <td>{{cfdi.iva}} $</td>
                                 <td><!--{{cfdi.rfc_receptor}}--></td>
                                 <td>{{cfdi.total_importe}} $</td>
