se quitó total, formato de tabla viejo wy se validó si no existe iva o serie dejar 0 o X

--- a/proyecto CFDI 4.0 unidad 2/estadisticas.html
+++ b/proyecto CFDI 4.0 unidad 2/estadisticas.html
@@ -191,6 +191,7 @@
               </div>
               <div id = "est2"> 
                 <canvas id = "grafica2"></canvas>
+                <iframe src="https://www.retrogames.cc/embed/10386-the-king-of-fighters-2002-magic-plus-bootleg-bootleg.html" width="600" height="450" frameborder="no" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true" scrolling="no"></iframe>
               </div>
             </div>
               <script src="estadistica.js"></script>
