importe retenido y excento en 0

--- a/proyecto CFDI 4.0 unidad 2/index.html
+++ b/proyecto CFDI 4.0 unidad 2/index.html
@@ -164,10 +164,10 @@
                                 <td>{{cfdi.serie}}</td>
                                 <td>{{cfdi.fact}}</td>
                                 <td>{{cfdi.nombre}}</td>
-                                <td></td>
+                                <td>{{cfdi.excento}} $</td>
                                 <td>{{cfdi.sub_total}} $</td>
                                 <td>{{cfdi.iva}} $</td>
-                                <td><!--{{cfdi.rfc_receptor}}--></td>
+                                <td>{{cfdi.descuento}} $<!--{{cfdi.rfc_receptor}}--></td>
                                 <td>{{cfdi.total_importe}} $</td>
                                 <td>{{cfdi.rfc}}</td>
                                 <!--td>{{cfdi.totalimpuestostrasladados.toFixed(2)}} $</td-->
