--- a/proyecto CFDI 4.0 unidad 2/cambiar_pass.html
+++ b/proyecto CFDI 4.0 unidad 2/cambiar_pass.html
@@ -4,10 +4,10 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>CFDI</title>
-    <link rel="stylesheet" href="../../assets/vendors/mdi/css/materialdesignicons.min.css">
-    <link rel="stylesheet" href="../../assets/vendors/css/vendor.bundle.base.css">
-    <link rel="stylesheet" href="../../assets/css/style.css">
-    <link rel="shortcut icon" href="../../assets/images/favicon.png" />
+    <link rel="stylesheet" href="assets/vendors/mdi/css/materialdesignicons.min.css">
+    <link rel="stylesheet" href="assets/vendors/css/vendor.bundle.base.css">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="shortcut icon" href="assets/images/favicon.png" />
   </head>
   <body style="background-color: black;">
     <div class="container-scroller">
@@ -18,22 +18,18 @@
               <div class="card-body px-5 py-5">
                 <a href="login.html"><i class="mdi mdi-chevron-left"></i></a>
                 <h3 class="card-title text-left mb-3">Cambiar contraseña</h3>
-                <form>
-                  <div class="form-group">
-                    <label>Usuario</label>
-                    <input type="text" class="form-control p_input" placeholder="Nombre de usuario">
-                  </div>
+                <form action="cambiarContrasenya.php" method="POST" enctype="multipart/form-data">
                   <div class="form-group">
                     <label>Correo electronico</label>
-                    <input type="email" class="form-control p_input" placeholder="Dirección de correo">
+                    <input type="email" name = "correo" class="form-control p_input" placeholder="Dirección de correo">
                   </div>
                   <div class="form-group">
                     <label>Contraseña</label>
-                    <input type="password" class="form-control p_input" placeholder="Contraseña">
+                    <input type="password" name = "contrasenya" class="form-control p_input" placeholder="Contraseña">
                   </div>
                   <div class="form-group">
                     <label>Nueva contraseña</label>
-                    <input type="password" class="form-control p_input" placeholder="Nueva contraseña">
+                    <input type="password" name = "nuevaContrasenya" class="form-control p_input" placeholder="Nueva contraseña">
                   </div>
                   <div class="form-group d-flex align-items-center justify-content-between">
                     <div class="form-check">
@@ -51,11 +47,11 @@
         </div>
       </div>
     </div>
-    <script src="../../assets/vendors/js/vendor.bundle.base.js"></script>
-    <script src="../../assets/js/off-canvas.js"></script>
-    <script src="../../assets/js/hoverable-collapse.js"></script>
-    <script src="../../assets/js/misc.js"></script>
-    <script src="../../assets/js/settings.js"></script>
-    <script src="../../assets/js/todolist.js"></script>
+    <script src="assets/vendors/js/vendor.bundle.base.js"></script>
+    <script src="assets/js/off-canvas.js"></script>
+    <script src="assets/js/hoverable-collapse.js"></script>
+    <script src="assets/js/misc.js"></script>
+    <script src="assets/js/settings.js"></script>
+    <script src="assets/js/todolist.js"></script>
   </body>
 </html>
