--- a/proyecto CFDI 4.0 unidad 2/login.html
+++ b/proyecto CFDI 4.0 unidad 2/login.html
@@ -6,17 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>CFDI</title>
     <!-- plugins:css -->
-    <link rel="stylesheet" href="../../assets/vendors/mdi/css/materialdesignicons.min.css">
-    <link rel="stylesheet" href="../../assets/vendors/css/vendor.bundle.base.css">
+    <link rel="stylesheet" href="assets/vendors/mdi/css/materialdesignicons.min.css">
+    <link rel="stylesheet" href="assets/vendors/css/vendor.bundle.base.css">
     <!-- endinject -->
     <!-- Plugin css for this page -->
     <!-- End plugin css for this page -->
     <!-- inject:css -->
     <!-- endinject -->
     <!-- Layout styles -->
-    <link rel="stylesheet" href="../../assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css">
     <!-- End layout styles -->
-    <link rel="shortcut icon" href="../../assets/images/favicon.png" />
+    <link rel="shortcut icon" href="assets/images/favicon.png" />
   </head>
   <body style="background-color: black;">
     <div class="container-scroller">
@@ -27,14 +27,14 @@
               <div class="card-body px-5 py-5">
                 <a href="index.html"><i class="mdi mdi-chevron-left"></i></a>
                 <h3 class="card-title text-left mb-3">Iniciar sesión</h3>
-                <form>
+                <form action="comprobarExistenciaUsuario.php" method="POST" enctype="multipart/form-data">
                   <div class="form-group">
                     <label>Usuario o correo electronico *</label>
-                    <input type="text" class="form-control p_input" placeholder="Usuario o correo">
+                    <input type="text" name = "nombreUsuario" class="form-control p_input" placeholder="Usuario o correo">
                   </div>
                   <div class="form-group">
                     <label>Contraseña *</label>
-                    <input type="password" class="form-control p_input" placeholder="Contraseña">
+                    <input type="password" name = "contrasenya" class="form-control p_input" placeholder="Contraseña">
                   </div>
                   <div class="form-group d-flex align-items-center justify-content-between">
                     <div class="form-check">
@@ -59,16 +59,16 @@
     </div>
     <!-- container-scroller -->
     <!-- plugins:js -->
-    <script src="../../assets/vendors/js/vendor.bundle.base.js"></script>
+    <script src="/assets/vendors/js/vendor.bundle.base.js"></script>
     <!-- endinject -->
     <!-- Plugin js for this page -->
     <!-- End plugin js for this page -->
     <!-- inject:js -->
-    <script src="../../assets/js/off-canvas.js"></script>
-    <script src="../../assets/js/hoverable-collapse.js"></script>
-    <script src="../../assets/js/misc.js"></script>
-    <script src="../../assets/js/settings.js"></script>
-    <script src="../../assets/js/todolist.js"></script>
+    <script src="assets/js/off-canvas.js"></script>
+    <script src="assets/js/hoverable-collapse.js"></script>
+    <script src="assets/js/misc.js"></script>
+    <script src="assets/js/settings.js"></script>
+    <script src="assets/js/todolist.js"></script>
     <!-- endinject -->
   </body>
 </html>
