--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@
                               <tr><th>Traslados:</th><td>{{total_traslados}}</td></tr>
                               <tr><th>Nómina:</th><td>{{total_nomina}}</td></tr>
                               <tr><th>Pago:</th><td>{{total_pago}}</td></tr>
-                              <!--tr><th>Total:</th><td>${{total_suma.toFixed(2)}}</td></tr-->
+                              <tr><th>IVA:</th><td>${{total_iva.toFixed(2)}}</td></tr>
+                              <tr><th>Total:</th><td>${{total_suma.toFixed(2)}}</td></tr>
                           </tbody>
                       </table>
                   </div>
